Add members-only, improve nav style, change content from 'Designer & Developer' to 'Full Stack Developer', recategorize tech stack.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Designer and full-stack developer."
+      content="Full Stack Developer from Port Townsend, WA."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -60,7 +60,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"><!-- VSCODE -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"><!-- WEBPACK -->
 
-    <title>Dylan Arveson | Designer and full-stack developer</title>
+    <title>Dylan Arveson | Full Stack Developer</title>
     <style>
       body {
         margin: 0;
